<resources>
    <string name="app_name">Let\'s Talk</string>
    <string name="username">Username</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="let_s_talk_app">Let\'s Talk App!</string>
    <string name="user_name">User name</string>
    <string name="logout">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_your_message_here">Enter Your message here</string>
    <string name="send_messages">Send messages</string>
    <string name="hello">Hello !</string>
    <string name="profile">Profile</string>
    <string name="seen">seen</string>
    <string name="forget_your_password">Forget your password</string>
    <string name="email">Email</string>
    <string name="reset">Reset</string>
    <string name="by_clicking_reset">By clicking reset you will receive an e-mail to reset your password</string>
</resources>