<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/colorPrimary"
    tools:context=".StartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_talk_app"
        android:textSize="30sp"
        android:textColor="#fff"
        android:textStyle="bold" />
    <Button
        android:id="@+id/login_start"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_marginTop="100dp"
        android:textStyle="bold"
        android:text="@string/login"
        android:textColor="#fff"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/register_start"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        android:textColor="#fff"
        android:textStyle="bold"
        android:background="@color/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>