<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ResetPasswordActivity">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/bar_layout"/>
    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/forget_email"
            app:met_floatingLabel="normal"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <Button
            android:background="@color/colorPrimaryDark"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:text="@string/reset"
            android:layout_gravity="center"
            android:id="@+id/reset_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:textColor="#000"
            android:textStyle="bold"
            android:text="@string/by_clicking_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</LinearLayout>