<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">
    <include
        android:id="@+id/tool_bar"
        layout="@layout/bar_layout"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_below="@+id/tool_bar">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="30sp"
            android:textStyle="bold"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/email_login"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:met_floatingLabel="normal"
            android:inputType="textEmailAddress"
            android:hint="@string/e_mail"/>
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/password_login"
            android:layout_marginTop="10dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:met_floatingLabel="normal"
            android:inputType="textPassword"
            android:hint="@string/password"/>
        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/login"
            android:textColor="#fff"
            android:layout_marginTop="10dp"
            />
    </LinearLayout>
</RelativeLayout>