<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6e6e6"
    tools:context=".MessageActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar_message"
            android:background="@color/colorPrimaryDark"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/MenuStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_picture_message"
                android:layout_width="30dp"
                android:layout_height="30dp">
            </de.hdodenhof.circleimageview.CircleImageView>
            <TextView
                android:id="@+id/username_message"
                android:layout_marginStart="25dp"
                android:text="@string/user_name"
                android:textStyle="bold"
                android:textColor="#fff"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/message_list"
        android:layout_below="@id/app_bar_layout_message"
        android:layout_above="@id/relative_layout_chat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
    <RelativeLayout
        android:id="@+id/relative_layout_chat"
        android:background="#fff"
        android:padding="5dp"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/enterMessage"
            android:inputType="text"
            android:hint="@string/enter_your_message_here"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/send_button"
            android:autofillHints="@string/enter_your_message_here" />
        <ImageButton
            android:id="@+id/send_button"
            android:src="@drawable/ic_baseline_send_24"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/send_messages" />
    </RelativeLayout>
</RelativeLayout>